--- a/donate.html
+++ b/donate.html
@@ -82,7 +82,7 @@
        </div>
 
        <label for="gender"><b>Gender</b></label>&nbsp;&nbsp;
-       <input type="radio" id="male" name="gender" value="male">
+       <input type="radio" id="male" name="gender" value="male" required>
           <label for="male">Male</label>&nbsp;
           <input type="radio" id="female" name="gender" value="female">
           <label for="female">Female</label>&nbsp;
@@ -92,11 +92,10 @@
           <div class="form-group row">
             <div class="col-sm-10">
               <input id="in" type="text" class="form-control" id="number" placeholder="Mobile Number" required>
-              <label id="mobile" style = "color: red; visibility: hidden;"></label>
             </div>
          </div>
          <label for="age">Age</label>&nbsp;&nbsp;
-         <input id="in" style="border-radius: 5px; color: #fff; border: 1px solid #fff;" type="number" name="age" value="8"><br><br>
+         <input id="in" style="border-radius: 5px; color: #fff; border: 1px solid #fff;" type="number" name="age" value="8" required><br><br>
          <div class="text-center">
            <button type="submit" id="b1" class="btn btn-outline-success">Submit</button>
          </div>
@@ -112,12 +111,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="js/jquery.js" type="text/javascript"></script>
-  <script>
-  $(document).ready(function(){
-    $("#b1").click(function(){
-      alert("Thank you for your interest. Our team will get back to you shortly.");
-    })
-  })
-  </script>
   </body>
 </html>
