--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
           <a class="nav-link" href="contact.html">Contact Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="donate.html">Donate Now</a>
+          <a class="nav-link" href="donate.php">Donate Now</a>
         </li>
 
       </ul>
@@ -67,7 +67,7 @@ Mother Teresa expressed once like this – </p>
 <div class="qu">
 <h2 class="text-center" style="font-family: 'Chewy', cursive; padding-top: 15px;">I want you to be concerned about your next-door neighbor. Do you know your next-door neighbor?</h2>
 <div class="col-md-12 text-center">
-  <a href="donate.html" style="margin: 15px 0; padding-bottom: 10px;" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Donate Now</a>
+  <a href="donate.php" style="margin: 15px 0; padding-bottom: 10px;" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Donate Now</a>
 </div>
 </div>
 </div>
