--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
           <a class="nav-link" href="contact.html">Contact Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="donate.html">Donate Now</a>
+          <a class="nav-link" href="donate.php">Donate Now</a>
         </li>
 
       </ul>
