--- a/whatwedo.html
+++ b/whatwedo.html
@@ -43,7 +43,7 @@
           <a class="nav-link" href="contact.html">Contact Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="donate.html">Donate Now</a>
+          <a class="nav-link" href="donate.php">Donate Now</a>
         </li>
 
       </ul>
@@ -71,7 +71,7 @@ Be a part of this movement and spread the word to say the least.</p>
 <div class="seco">
 <h3 class="text-center">You don't need a reason to help🤝🏼, all you need is a good heart💓. Do you have one?</h3>
 <div class="col-md-12 text-center">
-  <a href="donate.html" style="margin: 15px 0; padding-bottom: 10px;" class="btn btn-dark btn-lg active" role="button" aria-pressed="true">Donate Now</a>
+  <a href="donate.php" style="margin: 15px 0; padding-bottom: 10px;" class="btn btn-dark btn-lg active" role="button" aria-pressed="true">Donate Now</a>
 </div>
 </div>
   </div>
