--- a/about.html
+++ b/about.html
@@ -9,27 +9,28 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="public/css/style.css">
     <link rel="icon" href="public/images/favicon.ico">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
 
     <title>About Us</title>
   </head>
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-6 col-md-12 col-lg-12">
+        <div class="col-sm-6 col-md-11 col-lg-11">
     <section class="sec2">
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background:#343A3A !important;">
-      <a class="navbar-brand" id="nab" href="welcome.html"><img id="nabi" src="public/images/logo.jpeg"<h2>Hands That Help</h2></a>
+      <a class="navbar-brand" id="nab" href="welcome.html" data-interval="2000"><img id="nabi" src="public/images/logo.png"<h2>Hands That<br><div class="he"> Help</div></h2></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="welcome.html">Home<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="welcome.html">HOME<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          About
+          ABOUT
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="about.html">About Us</a>
@@ -38,44 +39,56 @@
         </div>
       </li>
           <li class="nav-item">
-            <a class="nav-link" href="gallery.html">Gallery</a>
+            <a class="nav-link" href="gallery.html">GALLERY</a>
           </li>
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact Us</a>
+          <a class="nav-link" href="contact.html">CONTACT US</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="donate.php">Donate Now</a>
+          <a class="nav-link" href="donate.php" style="background:#E0C29A!important; color:#000!important;">DONATE NOW</a>
         </li>
-
       </ul>
       </div>
     </nav>
     <div class="jumbotron jumbotron-fluid">
       <div class="container-fluid">
 
-    <h1 style="font-family: 'Kaushan Script', cursive; padding-top: 20px;" class="display-4 text-center">About Us</h1>
+    <h1 style="font-family: 'PT Serif', serif; padding-top: 20px; margin-top: 50px;" class="display-4 text-center">About Us</h1>
+
     <hr>
     <br>
-    <p class="lead" style="margin-bottom: 15px;font-family: 'Handlee', cursive;">Hands that Help is a service-oriented, non-profitable organization initiated by a few doctors from Maulana Azad Medical College, Delhi. It was started recently, in the month of August,2020. We help the poor by collecting clothes from donors and distributing them to those who are in need. We also organize campaingns to collect old clothes and distribute where there is a need. We aim to inspire those who have the opportunity to lend their hands and help the needy. </p>
+    <p class="lead" style="margin-bottom: 15px;font-family: 'PT Serif', serif;">Hands that Help is a service-oriented, non-profitable organization initiated by a few doctors from Maulana Azad Medical College, Delhi. It was started recently, in the month of August,2020. We help the poor by collecting clothes from donors and distributing them to those who are in need. We also organize campaingns to collect old clothes and distribute where there is a need. We aim to inspire those who have the opportunity to lend their hands and help the needy. </p>
+    <div class="col-sm-6 col-md-11 col-lg-11">
+
+
     <div class="text-center">
-  <img src="public/images/s4.jpeg" class="rounded" alt="abt-us-pic" style="height: 300px; margin: 10px 0; ">
+<img src="public/images/s4.jpeg" class="rounded" alt="img" style="margin: 10px 0; width:100%; max-width: 500px">
 </div>
-    <p class="lead" style="margin-top: 15px;font-family: 'Handlee', cursive;">According to the Census of 2011, India has more than 1.7 million homeless residents, of which 938,384 are located in urban areas. These figures, however, grossly underestimate the real numbers of the homeless. Civil society organizations estimate that at least one per cent of the population of urban India is homeless. Based on this, it can be extrapolated that the population of the urban homeless is at least 3 million. In the capital city of Delhi alone, at any given point, civil society estimates place the number of homeless at around 150,000 - 200,000, of which at least 10,000 are women. India also has the highest number of street children in the world but there is no official data on their numbers or adequate schemes to respond to their special needs and concerns.
+</div>
+    <p class="lead" style="margin-top: 15px;">According to the Census of 2011, India has more than 1.7 million homeless residents, of which 938,384 are located in urban areas. These figures, however, grossly underestimate the real numbers of the homeless. Civil society organizations estimate that at least one per cent of the population of urban India is homeless. Based on this, it can be extrapolated that the population of the urban homeless is at least 3 million. In the capital city of Delhi alone, at any given point, civil society estimates place the number of homeless at around 150,000 - 200,000, of which at least 10,000 are women. India also has the highest number of street children in the world but there is no official data on their numbers or adequate schemes to respond to their special needs and concerns.
 Mother Teresa expressed once like this – </p>
 <div class="qu">
-<h2 class="text-center" style="font-family: 'Chewy', cursive; padding-top: 15px;">I want you to be concerned about your next-door neighbor. Do you know your next-door neighbor?</h2>
+<h2 class="text-center" style="padding-top: 15px;">I want you to be concerned about your next-door neighbor. Do you know your next-door neighbor?</h2>
 <div class="col-md-12 text-center">
-  <a href="donate.php" style="margin: 15px 0; padding-bottom: 10px;" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Donate Now</a>
+  <a href="donate.php" style="margin: 15px 0; padding-bottom: 5px; font-size: 1.2rem;" class="btn btn-primary active" role="button" aria-pressed="true">Donate Now</a>
 </div>
 </div>
-</div>
-</div>
-    </section>
     </div>
     </div>
     </div>
+
+</div>
+<div class="social-menu">
+  <ul>
+    <li><a href="https://api.whatsapp.com/send?phone=919516523558&text=&source=&data=&app_absent="target="_blank"><i class="fab fa-whatsapp"style="color: green;font-size:36px;" ></i></a></li>
+    <li><a href="https://instagram.com/hands_thathelp?igshid=1qzea17d65avj"target="_blank"><i class="fab fa-instagram" style="color: #000;font-size:36px"></i></a></li>
+    <li><a href="https://www.facebook.com/padebettu.akhilesh"target="_blank"><i class="fab fa-facebook" style="font-size:36px;" ></i></a></li>
+  </ul>
+</div>
+
+</section>
     <footer class="text-center">Copyright (c) 2020 Hands that Help All Rights Reserved.</footer>
 
 
