--- a/contact.html
+++ b/contact.html
@@ -17,18 +17,18 @@
   <body>
     <section class="sec4">
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background:#343A3A !important;">
-      <a class="navbar-brand" id="nab" href="welcome.html"><img id="nabi" src="public/images/logo.jpeg"<h2>Hands That Help</h2></a>
+      <a class="navbar-brand" id="nab" href="welcome.html" data-interval="2000"><img id="nabi" src="public/images/logo.png"<h2>Hands That<br><div class="he"> Help</div></h2></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="welcome.html">Home<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="welcome.html">HOME<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          About
+          ABOUT
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="about.html">About Us</a>
@@ -37,15 +37,15 @@
         </div>
       </li>
           <li class="nav-item">
-            <a class="nav-link" href="gallery.html">Gallery</a>
+            <a class="nav-link" href="gallery.html">GALLERY</a>
           </li>
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact Us</a>
+          <a class="nav-link" href="contact.html">CONTACT US</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="donate.php">Donate Now</a>
+          <a class="nav-link" href="donate.php" style="background:#E0C29A!important; color:#000!important;">DONATE NOW</a>
         </li>
 
       </ul>
@@ -63,13 +63,13 @@
             <br>
             <hr>
             <br>
-            <h5 style="margin-bottom: 40px;">If you have any queries regarding this, feel free to reach us.</h5>
-            <h5 style="margin-bottom: 40px;">You can either Whatsapp Us or drop a mail and we will get back to you at the earliest.</h5>
+            <h5 style="margin-bottom: 40px;">Leave a message here and we will get back to you shortly</h5>
+
     <div class="card" style="background: transparent;">
-  <h5 class="card-header">Whatsapp</h5>
+  <h5 class="card-header">Mobile Number</h5>
   <div class="card-body">
-    <h5 class="card-title">Please click on either of the button and you will be redirected to the whatsapp.</h5>
-    <a href="https://api.whatsapp.com/send?phone=919516523558&text=&source=&data=&app_absent=" target="_blank" class="colorchange btn btn-success btn-lg active"><i class="fab fa-whatsapp-square" style="margin-right: 10px;"></i>Dr. Akhilesh</a>
+    <h5 class="card-title">Please click on the button and you will be redirected to call.</h5>
+    <a href="tel: +918098335873" target="_blank" class="btn btn-outline-success"><i class="fas fa-phone-alt" style="margin-right: 10px;"></i>Call me</a>
   </div>
 </div>
 <br>
@@ -78,21 +78,23 @@
 <h5 class="card-header">Email</h5>
 <div class="card-body">
 <h5 class="card-title">Please click on the button and you will be redirected to the mail. Drop the mail right away and we will get back to you at the earliest.</h5>
-<a href="mailto:handsthathelp20@gmail.com" target="_blank" class="colorchange btn btn-dark btn-lg active"><i class="fas fa-envelope" style="margin-right: 10px;"></i>Gmail</a>
+<a href="mailto:handsthathelp20@gmail.com" target="_blank" class="btn btn-outline-dark"><i class="fas fa-envelope" style="margin-right: 10px;"></i>Gmail</a><br><br>
 </div>
 </div>
-
-
-
-
-
   </div>
  </div>
+</div>
+<div class="social-menu">
+  <ul>
+    <li><a href="https://api.whatsapp.com/send?phone=919516523558&text=&source=&data=&app_absent="target="_blank"><i class="fab fa-whatsapp"style="color: green;font-size:36px;" ></i></a></li>
+    <li><a href="https://instagram.com/hands_thathelp?igshid=1qzea17d65avj"target="_blank"><i class="fab fa-instagram" style="color: #000;font-size:36px"></i></a></li>
+    <li><a href="https://www.facebook.com/padebettu.akhilesh"target="_blank"><i class="fab fa-facebook" style="font-size:36px;" ></i></a></li>
+  </ul>
 </div>
 
 
 </section>
-<footer class="text-center">Copyright (c) 2020 Copyright Holder All Rights Reserved.</footer>
+<footer class="text-center">Copyright (c) 2020 Hands That Help All Rights Reserved.</footer>
 
 
 
