--- a/gallery.html
+++ b/gallery.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="public/css/style.css">
     <link rel="icon" href="public/images/favicon.ico">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
 
     <title>Gallery</title>
     <style>
@@ -27,34 +28,37 @@
         float: left;
         width: 25%;
       }
+      /* Smaller than standard 960 (devices and browsers) */
+@media only screen and (max-width: 959px) {}
 
-      @media only screen and (max-width:700px;){
-        .responsive{
-          width: 50%;
-          margin: 6px 0;
-        }
-      }
-      @media only screen and (max-width:500px;){
-        .responsive{
-          width: 100%;
-        }
-      }
+/* Tablet Portrait size to standard 960 (devices and browsers) */
+@media only screen and (min-width: 768px) and (max-width: 959px) {}
+
+/* All Mobile Sizes (devices and browser) */
+@media only screen and (max-width: 767px) {}
+
+/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
+@media only screen and (min-width: 480px) and (max-width: 767px) {}
+
+/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
+@media only screen and (max-width: 479px) {}
+
     </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background:#343A3A !important;">
-      <a class="navbar-brand" id="nab" href="welcome.html"><img id="nabi" src="public/images/logo.jpeg"<h2>Hands That Help</h2></a>
+      <a class="navbar-brand" id="nab" href="welcome.html" data-interval="2000"><img id="nabi" src="public/images/logo.png"<h2>Hands That<br><div class="he"> Help</div></h2></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="welcome.html">Home<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="welcome.html">HOME<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          About
+          ABOUT
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="about.html">About Us</a>
@@ -63,70 +67,97 @@
         </div>
       </li>
           <li class="nav-item">
-            <a class="nav-link" href="gallery.html">Gallery</a>
+            <a class="nav-link" href="gallery.html">GALLERY</a>
           </li>
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact Us</a>
+          <a class="nav-link" href="contact.html">CONTACT US</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="donate.php">Donate Now</a>
+          <a class="nav-link" href="donate.php" style="background:#E0C29A!important; color:#000!important;">DONATE NOW</a>
         </li>
 
       </ul>
       </div>
     </nav>
-<br><br><br><br><br><br><br><br>
-<div class="responsive">
-<div class="gallery">
-  <a href="public/images/s5.jpg"> <img src="public/images/s5.jpeg" width="300" height="200" alt=""> </a>
+<br><br><br>
+<div class="container header" style="margin-top: 50px;">
+    <div class="row row-content">
+        <div class="col">
+            <div id="carouselMain" class="carousel slide" data-ride="carousel" data-interval="0">
+                <div class="carousel-inner" role="listbox">
+                  <h2 style="color: #3F429B;" class="text-center">Please take a moment to look through our work....</h2><br>
+                    <div class="carousel-item active">
+                        <img class="d-block img-fluid" src="public/images/s19.jpg" alt="image1">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="public/images/s18.jpg" alt="image2">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="public/images/s18.jpeg" alt="image2">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="public/images/s16.jpeg" alt="image2">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="public/images/s17.jpg" alt="image3">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="public/images/s17.jpeg" alt="image2">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="public/images/s19.jpeg" alt="image2">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="public/images/s16.jpg" alt="image3">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="public/images/s20.jpg" alt="image3">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="public/images/s5.jpeg" alt="image3">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="public/images/s20.jpeg" alt="image2">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="public/images/s21.jpeg" alt="image2">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="public/images/s6.jpeg" alt="image3">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="public/images/s8.jpeg" alt="image3">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="public/images/s22.jpeg" alt="image2">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="public/images/s9.jpeg" alt="image3">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="public/images/s10.jpeg" alt="image3">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselMain" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                </a>
+                <a class="carousel-control-next" href="#carouselMain" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                </a>
+            </div>
+        </div>
+    </div>
+  </div>
+  <div class="social-menu">
+    <ul>
+      <li><a href="https://api.whatsapp.com/send?phone=919516523558&text=&source=&data=&app_absent="target="_blank"><i class="fab fa-whatsapp"style="color: green;font-size:36px;" ></i></a></li>
+      <li><a href="https://instagram.com/hands_thathelp?igshid=1qzea17d65avj"target="_blank"><i class="fab fa-instagram" style="color: black;font-size:36px"></i></a></li>
+      <li><a href="https://www.facebook.com/padebettu.akhilesh"target="_blank"><i class="fab fa-facebook" style="font-size:36px;" ></i></a></li>
+    </ul>
+  </div>
 
-</div>
-</div>
-<div class="responsive">
-<div class="gallery">
-  <a href="public/images/s6.jpeg"> <img src="public/images/s6.jpeg" width="300" height="200" alt=""> </a>
-
-</div>
-</div>
-<div class="responsive">
-<div class="gallery">
-  <a href="public/images/s8.jpeg"> <img src="public/images/s8.jpeg" width="300" height="200" alt=""> </a>
-
-</div>
-</div>
-<div class="responsive">
-<div class="gallery">
-  <a href="public/images/s9.jpeg"> <img src="public/images/s9.jpeg" width="300" height="200" alt=""> </a>
-
-</div>
-</div>
-<div class="responsive">
-<div class="gallery">
-  <a href="public/images/s10.jpeg"> <img src="public/images/s10.jpeg" width="300" height="200" alt=""> </a>
-
-</div>
-</div>
-<div class="responsive">
-<div class="gallery">
-  <a href="public/images/s13.jpeg"> <img src="public/images/s13.jpeg" width="300" height="200" alt=""> </a>
-
-</div>
-</div>
-<div class="responsive">
-<div class="gallery">
-  <a href="public/images/s14.jpeg"> <img src="public/images/s14.jpeg" width="300" height="200" alt=""> </a>
-
-</div>
-</div>
-
-<div class="responsive">
-<div class="gallery">
-  <a href="public/images/s15.jpeg"> <img src="public/images/s15.jpeg" width="300" height="200" alt=""> </a>
-
-</div>
-</div>
 <br><br>
 
 
