--- a/welcome.html
+++ b/welcome.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="public/css/style.css">
     <link rel="icon" href="public/images/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
 
     <title>Welcome</title>
     <style>
@@ -26,23 +27,20 @@
     }
     </style>
   </head>
-  <section class="sect">
-
-
 
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-  <a class="navbar-brand" id="nab" href="welcome.html" data-interval="2000"><img id="nabi" src="public/images/logo.jpeg"<h2>Hands That Help</h2></a>
+  <a class="navbar-brand" id="nab" href="welcome.html" data-interval="2000"><img id="nabi" src="public/images/logo.png"<h2>Hands That<br><div class="he"> Help</div></h2></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="welcome.html">Home<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="welcome.html">HOME<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      About
+      ABOUT
     </a>
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
       <a class="dropdown-item" href="about.html">About Us</a>
@@ -50,19 +48,16 @@
       <a class="dropdown-item" href="whatwedo.html">What we do</a>
     </div>
   </li>
-
-
-
       <li class="nav-item active">
-        <a class="nav-link" href="gallery.html">Gallery</a>
+        <a class="nav-link" href="gallery.html">GALLERY</a>
       </li>
   </ul>
   <ul class="navbar-nav ml-auto">
     <li class="nav-item active">
-      <a class="nav-link" href="contact.html">Contact Us</a>
+      <a class="nav-link" href="contact.html">CONTACT US</a>
     </li>
     <li class="nav-item active">
-      <a class="nav-link" href="donate.php">Donate Now</a>
+      <a class="nav-link" href="donate.php" style="background:#E0C29A!important; color:#000!important;">DONATE NOW</a>
     </li>
 
   </ul>
@@ -78,20 +73,20 @@
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
                         <img class="d-block img-fluid" src="public/images/s1.jpeg" alt="image1">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-md-block">
                             <h2><span class="badge badge-warning">Helping the weak will make you strong</span></h2>
 
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img class="d-block img-fluid" src="public/images/s2.jpeg" alt="image2">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-md-block">
                             <h2><span class="badge badge-info">Care for everyone</span></h2>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img class="d-block img-fluid" src="public/images/s3.jpeg" alt="image3">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-md-block">
                             <h2><span class="badge badge-dark">Helping hands are better than praying lips</span></h2>
                         </div>
                     </div>
@@ -110,14 +105,21 @@
             </div>
         </div>
     </div>
-    </section>
-    <header>
+  </div>
+  <div class="social-menu">
+    <ul>
+      <li><a href="https://api.whatsapp.com/send?phone=919516523558&text=&source=&data=&app_absent="target="_blank"><i class="fab fa-whatsapp"style="color: green;font-size:36px" ></i></a></li>
+      <li><a href="https://instagram.com/hands_thathelp?igshid=1qzea17d65avj"target="_blank"><i class="fab fa-instagram" style="color: #000;font-size:36px"></i></a></li>
+      <li><a href="https://www.facebook.com/padebettu.akhilesh"target="_blank"><i class="fab fa-facebook" style="font-size:36px;" ></i></a></li>
+    </ul>
+  </div>
+
 
       <section class="sec1">
         <div class="container">
           <div class="row">
             <div class="col-md-4">
-              <div class="card card-body h-100" style="width: 20rem; margin-right: 10px;">
+              <div class="card card-body h-100" style="width:100%; max-width: 20rem; margin-right: 10px;">
   <img src="public/images/vision.jpg" class="card-img-top" alt="vision_image">
   <div class="card-body">
     <p class="card-text"><b>A man's true wealth is the good he does in this world</b></p>
@@ -125,7 +127,7 @@
 </div>
 </div>
 <div class="col-md-4">
-  <div class="card card-body h-100" style="width: 20rem; margin-right: 10px;">
+  <div class="card card-body h-100" style="width:100%; max-width: 20rem;margin-right: 10px;">
 <img src="public/images/mission.jpg" class="card-img-top" alt="mission_image">
 <div class="card-body">
 <p class="card-text"><b>To give a lending hand to our less previleged neighbours by visiting them, clothing them and expressing solidarity.</b></p>
@@ -133,17 +135,18 @@
 </div>
 </div>
 <div class="col-md-4">
-  <div class="card card-body h-100" style="width: 20rem;">
+  <div class="card card-body h-100" style="width:100%; max-width: 20rem;margin-right: 10px;">
 <img src="public/images/moto.jpg" class="card-img-top" alt="vision_image">
 <div class="card-body">
 <p class="card-text"><b>We aim to inspire others who have the opportunity to identify and reach out to the homeless</b></p>
 </div>
 </div>
 </div>
+          </div>
 
           </div>
 
-        </div>
+
             </section>
             <!--ends-->
 <footer class="text-center">Copyright (c) 2020 Hands that Help All Rights Reserved.</footer>
